# drill_data_analysis

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  diagram.md
.github/workflows/: ci-lint.yml  ci-tests.yml  image-build2push.yml  terraform-deploy.yml  terraform-destroy.yml
ci/configs/: data_sources.yaml
ci/scripts/: build-glue-package.sh  build-glue-wheels.sh  execute-lambda-command.sh  extract-urls.sh  lambda-version.sh  lint-all-lambdas.sh
drilling_projects/infrastructure/envs/dev/: bootstrap.tf  state.tf
glue/: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  bundle.sh  glue_job.py  pyproject.toml
glue/ingestion/: glue_job.py
glue/ingestion/config/: __init__.py  config.py  dev.yml  example.dev.yml
glue/ingestion/handlers/: __init__.py  kaggle_datahandler.py
glue/ingestion/handlers/base/: data.py
glue/ingestion/sinks/: __init__.py  local_sink.py  s3_sink.py
glue/ingestion/sinks/base/: sink.py
infrastructure/envs/dev/: bootstrap.tf  main.tf  provider.tf  state.tf  variables.tf  variables.tfvars.template  versions.tf
infrastructure/modules/LambdaECR/: ecr.tf  iam_policy.tf  lambda.tf  outputs.tf  policies.tf  roles.tf  variables.tf
infrastructure/modules/datalake/: outputs.tf  policies.tf  roles.tf  s3-bronze.tf  s3-gold.tf  s3-silver.tf  variables.tf
infrastructure/modules/ecr/: ecr.tf  ecr_policy.tf  outputs.tf  variables.tf
infrastructure/modules/glue/: archive-glue-job.tf  glue-s3.tf  policies.tf  roles.tf  s3.tf  variables.tf
infrastructure/modules/ssm-parameters/: outputs.tf  parameter_store.tf  variables.tf
lambdas/gold-transform/: Dockerfile  Makefile  changelog.md  pyproject.toml
lambdas/gold-transform/transform/: __init__.py  serve.py
lambdas/ingestion/: .dockerignore  Dockerfile  Makefile  README.md  changelog.md  pyproject.toml
lambdas/ingestion/ingest/: __init__.py  serve.py
lambdas/ingestion/ingest/config/: config.py  dev.yml  dev.yml.example  env.yml.example
lambdas/ingestion/ingest/handlers/: crawler_datahandler.py  kaggle_datahandler.py
lambdas/ingestion/ingest/handlers/base/: data.py
lambdas/ingestion/ingest/sinks/: local_sink.py  s3_sink.py
lambdas/ingestion/ingest/sinks/base/: sink.py
lambdas/ingestion/tests/: random_test.py
lambdas/silver-transform/: .dockerignore  Dockerfile  Makefile  changelog.md  pyproject.toml
lambdas/silver-transform/clean/: __init__.py  serve.py
