[tool.poetry]
name = "ingestion"
version = "0.1.0"
description = ""
authors = ["Egbewatt Nkongho <egbewattnkonghob@gmail.com>"]
readme = "README.md"
packages = [{ include = "ingest" }]

[tool.poetry.scripts]
serve = "ingest.serve:serve"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
