[tool.poetry]
name = "ingestion"
version = "0.1.0"
description = "A modular AWS Lambda ingestion and transformation pipeline, packaged with Docker and managed via Terraform."
authors = ["Egbewatt Nkongho <egbewattnkonghob@gmail.com>"]
readme = "README.md"
packages = [{ include = "ingest" }]

[tool.poetry.scripts]
serve = "ingest.serve:serve"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
