[tool.poetry]
name = "ingestion"
version = "0.2.0"
description = "A modular AWS Lambda ingestion and transformation pipeline, packaged with Docker and managed via Terraform."
authors = ["Egbewatt Nkongho <egbewattnkonghob@gmail.com>"]
readme = "README.md"
packages = [{ include = "ingest" }]

[tool.poetry.scripts]
serve = "ingest.serve:serve"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
