[tool.poetry]
name = "silver-transform"
version = "0.2.0"
description = "A modular AWS Lambda function for silver-level data transformation, containerized with Docker and managed via Terraform."
authors = ["Egbewatt Nkongho <egbewattnkonghob@gmail.com>"]
readme = "README.md"
packages = [{include = "clean"}]

[tool.poetry.scripts]
serve = "clean.serve:serve"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
